# gof-document-editor

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
doc-editor-lib/: CMakeLists.txt
doc-editor-lib/include/: Character.h  Glyph.h  Window.h
examples/: CharacterExample.cpp
tests/: CMakeLists.txt  HelloTests.cpp
